--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 fastapi
 uvicorn
 sqlalchemy
-passlib
-python-dotenv
-python-jose
-smtplib
-cloudinary
+psycopg2
 pydantic
+python-dotenv
+passlib[bcrypt]
+pyjwt
+fastapi-mail
+redis
+celery
+aiofiles
+email-validator
